feat: Introduce Admin Feedback and Missing Found Interfaces
- Added AdminFeedbackDashboardRow and AdminFeedbackSummaryRow interfaces for admin feedback management.
- Removed AdminMissingFoundCategoryOptionRow interface as it is no longer needed.
- Introduced AdminMissingFoundReportRow interface for detailed missing/found report data.
- Updated AdminMissingFoundSummaryRow interface to include additional summary metrics.

refactor: Enhance AlertEntity and Repository

- Refactored AlertEntity to include status and contact number fields.
- Updated AlertJpaRepository to support new queries for fetching alerts with detailed information.
- Modified AlertMapper to handle new fields in AlertEntity.
- Improved AlertRepositoryImpl to ensure proper handling of new fields during save operations.

fix: Database Migration Updates

- Created new migration scripts to add status and contact number columns to the alerts table.
- Removed outdated migration scripts that were redundant or incorrect.
- Added employee management fields (hire_date, department, employment_status) to users table.
- Aligned feedback status constraints to ensure data integrity.

chore: Clean up unused migration scripts

- Deleted obsolete migration scripts that are no longer relevant to the current schema.