@@ -8,7 +8,6 @@ import org.springframework.stereotype.Repository;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Repository
 public class AlertRepositoryImpl implements AlertRepository {
@@ -17,7 +16,11 @@ public class AlertRepositoryImpl implements AlertRepository {
     private final AlertMapper mapper;
     private final ApplicationEventPublisher eventPublisher;
 
-    public AlertRepositoryImpl(AlertJpaRepository jpaRepository, AlertMapper mapper, ApplicationEventPublisher eventPublisher) {
+    public AlertRepositoryImpl(
+            AlertJpaRepository jpaRepository,
+            AlertMapper mapper,
+            ApplicationEventPublisher eventPublisher
+    ) {
         this.jpaRepository = jpaRepository;
         this.mapper = mapper;
         this.eventPublisher = eventPublisher;
@@ -26,30 +29,31 @@ public class AlertRepositoryImpl implements AlertRepository {
     @Override
     public Alert save(Alert alert) {
         AlertEntity entity;
-        if (alert.getId() != null && jpaRepository.existsById(alert.getId())) {
-             entity = jpaRepository.findById(alert.getId()).orElseThrow();
-             entity.setReporterId(alert.getReporterId());
-             entity.setType(alert.getType());
-             entity.setCategory(alert.getCategory());
-             entity.setStatus(alert.getStatus());
-             entity.setTitle(alert.getTitle());
-             entity.setDescription(alert.getDescription());
-             entity.setLocation(alert.getLocation());
-             entity.setEventTime(alert.getEventTime());
-             entity.setPhotoUrls(alert.getPhotoUrls());
-             entity.setResolved(alert.isResolved());
-             entity.setResolvedAt(alert.getResolvedAt());
-        } else {
-             entity = mapper.toEntity(alert);
-        }
-        
-        AlertEntity savedEntity = jpaRepository.save(entity);
 
-        // Publish events
+        if (alert.getId() != null && jpaRepository.existsById(alert.getId())) {
+            entity = jpaRepository.findById(alert.getId()).orElseThrow();
+            entity.setReporterId(alert.getReporterId());
+            entity.setType(alert.getType());
+            entity.setCategory(alert.getCategory());
+            entity.setTitle(alert.getTitle());
+            entity.setDescription(alert.getDescription());
+            entity.setLocation(alert.getLocation());
+            entity.setEventTime(alert.getEventTime());
+            entity.setPhotoUrls(alert.getPhotoUrls());
+            entity.setResolved(alert.isResolved());
+            entity.setResolvedAt(alert.getResolvedAt());
+            entity.setStatus(alert.getStatus());
+            entity.setContactNumber(alert.getContactNumber());
+        } else {
+            entity = mapper.toEntity(alert);
+        }
+
+        AlertEntity saved = jpaRepository.save(entity);
+
         alert.getDomainEvents().forEach(eventPublisher::publishEvent);
         alert.clearDomainEvents();
 
-        return mapper.toDomain(savedEntity);
+        return mapper.toDomain(saved);
     }
 
     @Override
@@ -59,8 +63,9 @@ public class AlertRepositoryImpl implements AlertRepository {
 
     @Override
     public List<Alert> findActiveAlerts() {
-        return jpaRepository.findByIsResolvedFalseOrderByCreatedAtDesc().stream()
+        return jpaRepository.findByIsResolvedFalseOrderByCreatedAtDesc()
+                .stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
